# ChangeLog for dev-util/bouml
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/bouml/ChangeLog,v 1.31 2007/08/17 23:17:51 ferdy Exp $

  17 Aug 2007; Fernando J. Pereda <ferdy@gentoo.org> -bouml-2.22.ebuild,
  -bouml-2.22.2.ebuild, -bouml-2.23.1.ebuild, -bouml-2.24.ebuild,
  -bouml-2.25.2.ebuild, -bouml-2.26.1.ebuild:
  Cleanup old versions

*bouml-2.30.2 (17 Aug 2007)

  17 Aug 2007; Fernando J. Pereda <ferdy@gentoo.org> +bouml-2.30.2.ebuild:
  Version bump, fixes bug #189045

*bouml-2.27 (06 Jun 2007)

  06 Jun 2007; Fernando J. Pereda <ferdy@gentoo.org> +bouml-2.27.ebuild:
  New upstream version.

*bouml-2.26.1 (15 May 2007)

  15 May 2007; Fernando J. Pereda <ferdy@gentoo.org> +bouml-2.26.1.ebuild:
  New upstream version.

*bouml-2.25.2 (07 May 2007)

  07 May 2007; Fernando J. Pereda <ferdy@gentoo.org> +bouml-2.25.2.ebuild:
  New upstream version.

*bouml-2.24 (19 Apr 2007)

  19 Apr 2007; Fernando J. Pereda <ferdy@gentoo.org> +bouml-2.24.ebuild:
  New upstream version.

*bouml-2.23.1 (13 Apr 2007)

  13 Apr 2007; Fernando J. Pereda <ferdy@gentoo.org> +bouml-2.23.1.ebuild:
  New upstream version

*bouml-2.22.2 (07 Apr 2007)

  07 Apr 2007; Fernando J. Pereda <ferdy@gentoo.org> -bouml-2.21.2.ebuild,
  -bouml-2.21.5.ebuild, +bouml-2.22.2.ebuild:
  New upstream version. Remove 2.21.X

*bouml-2.22 (19 Mar 2007)

  19 Mar 2007; Fernando J. Pereda <ferdy@gentoo.org> metadata.xml,
  +bouml-2.22.ebuild:
  New upstream version. Adding myself as maintainer.

  19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove flameeyes from metadata.xml due to retirement.

*bouml-2.21.5 (13 Feb 2007)

  13 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> +bouml-2.21.5.ebuild:
  Version bump.

  25 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> -bouml-2.21.ebuild:
  Also this one.

  25 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> -bouml-2.19.5.ebuild,
  -bouml-2.20.ebuild, -bouml-2.21.1.ebuild: