@@ -3,6 +3,7 @@ Hash: SHA1
 
 DIST bouml_2.27.tar.gz 3872944 RMD160 d86e9b8db713424e2bd2f3ab3f04471195cc664f SHA1 88d8100e460512117477194cbf15112ca4617ec3 SHA256 e215c17f0c853d7eff4c5abda5237445365176d06187047e6d41889a331bc135
 DIST bouml_2.30.2.tar.gz 3951873 RMD160 1bf15d0264a7f2f506158f13a1eb6eb54be5bff1 SHA1 638d8765ba0c40bb7f363cd4cac8ee5c2b7c4bab SHA256 cd96076dec6f4d4c57177bb9dd8ce2cc15522276bd60baff0d672f0cc91eec39
+DIST bouml_3.3.2.tar.gz 4133934 RMD160 9618ad30ca09104cf8bc1124e5837a0fd8f05658 SHA1 c2cad25b5bf2df60ae192208257fe6129b50f6a3 SHA256 c15dd68263bd7cd22d67899ee4826949b354b97c7fbdcb35a6a541d332e71ddd
 EBUILD bouml-2.27.ebuild 868 RMD160 34bda81dbba02c1d78f50accbf55148fa81474e5 SHA1 e3ac898f927dc382770f6ed74a9ecf3a02a7b3fc SHA256 c5d1320d42e6570a41c16398cce1c181f3896f5b9c0bbeeae415595892d9f530
 MD5 556940d0fae136827b0228b625bc0fa8 bouml-2.27.ebuild 868
 RMD160 34bda81dbba02c1d78f50accbf55148fa81474e5 bouml-2.27.ebuild 868
@@ -11,10 +12,14 @@ EBUILD bouml-2.30.2.ebuild 870 RMD160 4668cb941d90f4c6d44d88405386dde59932cce3 S
 MD5 68df30e27373d10dcbf069341635530e bouml-2.30.2.ebuild 870
 RMD160 4668cb941d90f4c6d44d88405386dde59932cce3 bouml-2.30.2.ebuild 870
 SHA256 1bec5431c7a61cb1f0fe04cdc983a0e6c5c3f9dc91ebaa5657372cc0b2fb675d bouml-2.30.2.ebuild 870
-MISC ChangeLog 4862 RMD160 fa64a32ee3b78258207c56132bbd77be4638a66f SHA1 5bc15b509ccdcec8c10b1c66821f22d3462cb07f SHA256 4f8270848c7a42e56642b346fb5a5a5718d08084bfa5f210de2a457fdfa575b9
-MD5 d0ececfcfd59920d221f84fe069b4364 ChangeLog 4862
-RMD160 fa64a32ee3b78258207c56132bbd77be4638a66f ChangeLog 4862
-SHA256 4f8270848c7a42e56642b346fb5a5a5718d08084bfa5f210de2a457fdfa575b9 ChangeLog 4862
+EBUILD bouml-3.3.2.ebuild 871 RMD160 c6e77b817e1ab2cecf655bcacdec765cd3462367 SHA1 2a3288bfa06ef8fe4a6ab7bc4f147827c22a65ae SHA256 95ecaae189d517f4352d5d7bded206360ca187618c82c92f9dba37edb68a0cc9
+MD5 0ac422409c79004e7f1b347139e0c70b bouml-3.3.2.ebuild 871
+RMD160 c6e77b817e1ab2cecf655bcacdec765cd3462367 bouml-3.3.2.ebuild 871
+SHA256 95ecaae189d517f4352d5d7bded206360ca187618c82c92f9dba37edb68a0cc9 bouml-3.3.2.ebuild 871
+MISC ChangeLog 5009 RMD160 f75878b52b859f78aff0430daf1957fce387a6e2 SHA1 80728cbca4475ca84debb7968c51304a1ec2304d SHA256 75032b069eb625f3cf429895d44358e7680b27d50c837fcac9cb528ca204f6d0
+MD5 f6cd74796dea6c0ca4727426b746ef49 ChangeLog 5009
+RMD160 f75878b52b859f78aff0430daf1957fce387a6e2 ChangeLog 5009
+SHA256 75032b069eb625f3cf429895d44358e7680b27d50c837fcac9cb528ca204f6d0 ChangeLog 5009
 MISC metadata.xml 258 RMD160 09059381383349b2613d848d89f51996569595f3 SHA1 c500f770ae2300901055e89331f479823f3283fd SHA256 c3e7eb522c61b005199ff54966597e53b66824c7df5b9d29e5a9c7c3272c3bd1
 MD5 642e99d8f338a7f3dc3d6d0a3300c995 metadata.xml 258
 RMD160 09059381383349b2613d848d89f51996569595f3 metadata.xml 258
@@ -25,10 +30,13 @@ SHA256 7f68ef43323a16fbefaeadae136559b26e890796ac0273062df9a2f39477f3a3 files/di
 MD5 bb09d6cc0fa37135da5e699a4316c81b files/digest-bouml-2.30.2 241
 RMD160 a8ca4e5f3f74a2c01f10543c2f9ba8db2adeaafa files/digest-bouml-2.30.2 241
 SHA256 d9439ad9acbb562635da23de44053a1630d1014c27edbbfe5fa77a2aa0556336 files/digest-bouml-2.30.2 241
+MD5 a7986ced50fbfc3bf97ef792d44eaa46 files/digest-bouml-3.3.2 238
+RMD160 f07806a3199bf5ac6981022039067bf366d4135d files/digest-bouml-3.3.2 238
+SHA256 7e6883c94e3536043d9a831d068a9dff5910e737b34072a637eec4c334934240 files/digest-bouml-3.3.2 238
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.6 (GNU/Linux)
 
-iD8DBQFGxiytViELBEf1JB0RAngxAJ9kk5INypbeeMqkg8M5ZhXOlG7N2QCggynJ
-4h1hs/peslnoKS2bWPGs4OM=
-=xIT9
+iD8DBQFHO3A0ViELBEf1JB0RApICAJ94ega/lSgDowQnQq+GukD0LtGl+QCdG+Wb
+BSDBlxPUySPKJsAGDcMh+7I=
+=pnUM
 -----END PGP SIGNATURE-----
