@@ -1,0 +1,34 @@
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/bouml/bouml-3.3.2.ebuild,v 1.1 2007/11/14 22:01:10 ferdy Exp $
+
+inherit multilib qt3
+
+MY_P="${PN}_${PV}"
+
+DESCRIPTION="Free UML 2 tool with code generation"
+HOMEPAGE="http://bouml.free.fr/"
+SRC_URI="http://bouml.free.fr/${MY_P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64 ~x86 ~x86-fbsd"
+IUSE=""
+
+DEPEND="$(qt_min_version 3)"
+RDEPEND="${DEPEND}"
+
+S="${WORKDIR}/${MY_P}"
+
+src_compile() {
+	find src/ genplugouts/ -type f -name "*.pro" | while read file; do
+		local subdir="${file%/*}"
+		eqmake3 "${file}" -o "${subdir}"/Makefile
+		emake -C "${subdir}" || die "emake failed in ${subdir}"
+	done
+}
+
+src_install() {
+	emake BOUML_LIB="/usr/$(get_libdir)/bouml" DESTDIR="${D}" install \
+		|| die "emake install failed"
+}
