@@ -1,0 +1,3 @@
+MD5 fee9ec788aab015753676b6fe585c59b bouml_3.3.2.tar.gz 4133934
+RMD160 9618ad30ca09104cf8bc1124e5837a0fd8f05658 bouml_3.3.2.tar.gz 4133934
+SHA256 c15dd68263bd7cd22d67899ee4826949b354b97c7fbdcb35a6a541d332e71ddd bouml_3.3.2.tar.gz 4133934
