@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/bouml
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/bouml/ChangeLog,v 1.31 2007/08/17 23:17:51 ferdy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/bouml/ChangeLog,v 1.32 2007/11/14 22:01:10 ferdy Exp $
+
+*bouml-3.3.2 (14 Nov 2007)
+
+  14 Nov 2007; Fernando J. Pereda <ferdy@gentoo.org> +bouml-3.3.2.ebuild:
+  Version bump and fixes as per bug #189045
 
   17 Aug 2007; Fernando J. Pereda <ferdy@gentoo.org> -bouml-2.22.ebuild,
   -bouml-2.22.2.ebuild, -bouml-2.23.1.ebuild, -bouml-2.24.ebuild,
